// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`XMP document > Dublin Core > should create Dublin core meta data 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
		<rdf:Description rdf:about="">
			<dc:format xmlns:dc="http://purl.org/dc/elements/1.1/">application/pdf</dc:format>
		</rdf:Description>
	</rdf:RDF>
</x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`XMP document > should create a fresh XMP document 1`] = `
"<?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
		<rdf:Description rdf:about=""/>
	</rdf:RDF>
</x:xmpmeta>
<?xpacket end="w"?>"
`;
